--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -5,7 +5,7 @@
 .blocsport-ap{
 display: grid;
 grid-template-columns: 400px 400px 400px;
-grid-template-rows: 
+grid-template-rows:;
 
 }
 .Aquagym-ap{
@@ -66,8 +66,10 @@ margin-left: 23px;
 .footer-ap{
 display: grid;
 grid-template-columns: 400px 400px 400px;
-background-color: gray;
+background-color:rgb(82, 222, 247);
 color: white;
+border-style: double;
+text-align: center;
 
 }
 .Mention-legale-ap{
@@ -80,5 +82,83 @@ color: white;
 }
 .liens-utliles-ap{
 
+
+}
+.formulaire-ap{
+  display: grid;
+  grid-column: 200px;
+  
+
+}
+form {
+    /* Uniquement centrer le formulaire sur la page */
+    margin: 0 auto;
+    width: 400px;
+    /* Encadré pour voir les limites du formulaire */
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 2em;
+    
+  }
+  
+  form div + div {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  input, textarea {
+    /* Pour s'assurer que tous les champs texte ont la même police.
+       Par défaut, les textarea ont une police monospace */
+    font: 1em sans-serif;
+  
+    /* Pour que tous les champs texte aient la même dimension */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Pour harmoniser le look & feel des bordures des champs texte */
+    border: 3px solid white;
+  }
+  
+  input:focus, textarea:focus {
+    /* Pour souligner légèrement les éléments actifs */
+    border-color: #000;
+  }
+  
+  textarea {
+    /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
+    vertical-align: top;
+  
+    /* Pour donner assez de place pour écrire du texte */
+    height: 5em;
+  }
+  
+  .button {
+    /* Pour placer le bouton à la même position que les champs texte */
+    padding-left: 90px; /* même taille que les étiquettes */
+  }
+  
+  button {
+    /* Cette marge supplémentaire représente grosso modo le même espace que celui
+       entre les étiquettes et les champs texte */
+    margin-left: .5em;
+  }
+  aside{
+     
+  
+
+  }
+  body{
+    background-color:   rgb(82, 222, 247);
+
+  }
+li{
+list-style: none;
+text-decoration: none;
 
 }
