--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -691,18 +691,73 @@ p {
   .formul { 
     margin-top: 50px;
     border: black 2px solid;
-    width: 492px;
+    width: 300px;
     margin-left: auto;
     margin-right: auto; 
     background-color:#095aaabe;
     border-radius: 15px;
   }
-  legend { 
+  .formul h2 { 
     font-size: 10px;
+    padding-left: 50px;
+    color: white;
+  }
+  
+  
+    form div + div {
+      margin-top: 1em;
+    }
+  
+    label {
+      /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
+      display: inline-block;
+      width: 145px;
+      text-align: right;
+      color: white;
+      font-size: 10px;
+    }
+  
+    input, textarea {
+      /* Pour s'assurer que tous les champs texte ont la même police.
+         Par défaut, les textarea ont une police monospace */
+      font: 1em sans-serif;
+  
+      /* Pour que tous les champs texte aient la même dimension */
+      width: 100px;
+      height: 10px;
+      box-sizing: border-box;
+  
+      /* Pour harmoniser le look & feel des bordures des champs texte */
+      border: 3px solid white;
+    }
+  
+    input:focus, textarea:focus {
+      /* Pour souligner légèrement les éléments actifs */
+      border-color: #000;
+    }
+  
+    textarea {
+      /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
+      vertical-align: top;
+  
+      /* Pour donner assez de place pour écrire du texte */
+      height: auto;
+    }
+
+    button {
+      /* Cette marge supplémentaire représente grosso modo le même espace que celui
+         entre les étiquettes et les champs texte */
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+  /*modification de la legende*/
+  legend { 
+    font-size: 5px;
     font-weight: bold;
   }
   p { 
-    font-size: 10.4px;
+    font-size: 8px;
   }
   #mbid1 { 
     display: none;
@@ -711,5 +766,189 @@ p {
     display: grid;
     display: none;
   }
+/*modification du footer en telephone*/
+#logoeddy{ 
+  background:no-repeat center/55% url(../img/LA_MANU_CROISIERE.png);
+  width: 50px;
+  height: 80px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  right: 10px;
+}
+/*reseaux sociaux taille modification*/
+#reseaux i {
+  font-size: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+
+}
+/*modification de la taille des icones du footer*/
+#findevie { 
+  font-size: 9px;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+}
+/*modification du h2 en reponsive mobile*/
+.h2service { 
+  font-size: 10px;
+}
+/*disparition des icones qui dérange pour scotché son site*/
+
+/*modification des services*/
+#services i { 
+  font-size: 15px;
+}
+#services {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*modification du slider*/
+.sliderd2 { 
+  width: 350px;
+  height: 200px;
+  background: url(../img/sea-931164_1920.jpg);
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+  animation: slide 20s infinite;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+.articles{
+  text-align: center;
+  display: grid;
+  grid-template-rows: 270px;
+  grid-template-columns: repeat(3, 1fr);
+  width: 90%;
+  border: 2px solid #003468;
+  grid-gap: 5px;
+  margin-right:auto;
+  margin-left: auto;
+}
+#imagethermal{
+  background-image: url(../img/detente.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+#imagehuile{
+  background-image: url(../img/massage.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+#imagedetente{
+  background-image: url(../img/serviette.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+/*modification des autres articles pour le responsive mobile*/
+.articles2{
+  text-align: center;
+  display: grid;
+  grid-template-rows: 270px;
+  grid-template-columns: repeat(3, 1fr);
+  width: 90%;
+  border: 2px solid #003468;
+  grid-gap: 5px;
+  margin-right:auto;
+  margin-left: auto;
+}
+/* ce bloc contient les images de l'articles2 */
+#imagetheatre { 
+  background-image: url(../img/auditorium-86197_1920.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+#imageopera { 
+  background-image: url(../img/opera-594592_1920.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+#imageorchestre { 
+  background-image: url(../img/violins-1838390_1920.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+
+.articles3{
+  text-align: center;
+  display: grid;
+  grid-template-rows: 270px;
+  grid-template-columns: repeat(3, 1fr);
+  width: 90%;
+  border: 2px solid #003468;
+  grid-gap: 5px;
+  margin-right:auto;
+  margin-left: auto;
+}
+/* ce bloc contient les images de l'articles3*/
+#imageaquagyme {
+  background-image: url(../img/aquagym.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+#imagesallesport {
+  background-image: url(../img/salle-de-sport.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+#imagezumba{
+  background-image: url(../img/danse.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+
+
+
+
+
+
+
+
+.mango4{
+  text-align: center;
+  display: grid;
+  grid-template-rows: 270px;
+  grid-template-columns: repeat(3, 1fr);
+  width: 90%;
+  border: 2px solid #003468;
+  grid-gap: 5px;
+  margin-right:auto;
+  margin-left: auto;
+}
+/*voici la partie contenant les images de la derniere partie*/
+
+#imagehasard {
+  background-image: url(../img/roulette.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+#imagesous {
+  background-image: url(../img/gambling-602976_1920.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+#imagecarte {
+  background-image: url(../img/cartecasino.jpg);
+  background-size: cover;
+  height: 140px;
+  width: auto;
+}
+
+
 }
   
